2003-07-01 Alexandre Pigolkine <pigolkine@gmx.de>
	* win32Structs.cs			some fields cannot be marshaled
								OFNOTIFY structure simplified
	* FileDialog.cs		
	* win32functions.cs			
			call wine_get_unix_filename from FileOpen dialog
				
	* win32functions.cs		WineLib library name changed
	
	* NativeWindow.cs	CLIENTCREATESTRUCT parameter for MDI 
				Aleksey Ryabchuk <ryabchuk@yahoo.com>

2003-06-30 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Form.cs : TopLevel, AcceptButton, CancelButton
	* Application.cs : allow keyboard messages in modal forms
	* Control.cs : basic impl. of GetTopLevel, SetTopLevel

2003-06-30 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Cursors.cs : VSplit, HSplit cursors
	* Form.cs: WindowState ( not finished ), changes to Form.Close
	* Splitter.cs, Toolbar.cs : started implementation

2003-06-26 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TreeNode.cs
	* TreeNodeCollection.cs
	* TreeView.cs : more implementation added

2003-06-24 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TreeNode.cs
	* TreeNodeCollection.cs
	* TreeView.cs : more implementation added

2003-06-12 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Menu.cs
	* ContextMenu.cs : create context menu using CreatePopupMenu function

2003-06-12 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TreeNode.cs
	* TreeNodeCollection.cs
	* TreeView.cs
	* win32functions.cs : started impl. of TreeView control

2003-06-12 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : don't do anything if Anchor is set to default value
	* SystemInformation.cs : return some system metrics
	* UserControl.cs : default size impl.

2003-06-11 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* ContextMenu.cs : SourceControl, Show method
	* Control.cs : ContextMenu, CanSelect, force parent to perform layout when Dock property changes
	* GroupBox.cs
	* Label.cs
	* Panel.cs
	* PictureBox.cs
	* Splitter.cs
	* ProgressBar.cs : remove Selectable style
	* RadioButton.cs : set TextAlign to MiddleLeft by default
	* tooltip.cs : override Dispose method